pretend/tests/builds/inconsistent_async.stderr
error: Unable to deduce if this trait is async or not. Please declare at least one method and mark either all of them as async or none of them as async.
 --> $DIR/inconsistent_async.rs:6:7
  |
6 | trait Test1 {}
  |       ^^^^^

error: Unable to deduce if this trait is async or not. Please declare at least one method and mark either all of them as async or none of them as async.
 --> $DIR/inconsistent_async.rs:9:7
  |
9 | trait Test2 {
  |       ^^^^^

error: `?Send` is not supported for blocking implementation
  --> $DIR/inconsistent_async.rs:16:1
   |
16 | #[pretend(?Send)]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
